--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-GOD/GOD2017_Data/*
+code/GOD/GOD2017*
+code/GOD/.vs
 Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
