--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 code/GOD/GOD2017*
 code/GOD/.vs
 Assets/AssetStoreTools*
-
+android_sdk_3859397
+platforms
+build-tools
 # Visual Studio 2015 cache directory
 /.vs/
 
